--- a/config/west.yml
+++ b/config/west.yml
@@ -14,7 +14,7 @@ manifest:
       revision: main 
     - name: zmk
       remote: zmkfirmware
-      revision: 0.2
+      revision: main
       import: app/west.yml
   self:
     path: boards
