--- a/config/west.yml
+++ b/config/west.yml
@@ -12,9 +12,9 @@ manifest:
     - name: mario-peripheral-animation
       remote: gpeye
       revision: main 
-    - name: zmk
-      remote: zmkfirmware
-      revision: main
-      import: app/west.yml
+- name: zmk
+  remote: zmkfirmware
+  revision: v0.3
+  import: app/west.yml
   self:
     path: boards
